fix: align collaboration result padding and insight card blur background

--- a/assets/scss/pages/_front-page-collaboration.scss
+++ b/assets/scss/pages/_front-page-collaboration.scss
@@ -174,7 +174,7 @@
   position: relative;
   background: var(--result-bg);
   height: #{mixins.vw(130px)};
-  padding: #{mixins.vw(16px)};
+  padding: #{mixins.vw(24px)};
   display: flex;
   flex-direction: column;
 }
@@ -418,7 +418,7 @@
     margin-top: #{mixins.mvw(28px)};
     min-height: auto;
     height: auto;
-    padding: #{mixins.mvw(16px)};
+    padding: #{mixins.mvw(24px)};
   }
 
   .collaboration-card__result::before {
