--- a/assets/scss/pages/_front-page-insight-maze.scss
+++ b/assets/scss/pages/_front-page-insight-maze.scss
@@ -30,6 +30,7 @@
   width: 100%;
   height: 100%;
   border: 1px solid rgba(255, 255, 255, 0.16);
+  background: rgba(255, 255, 255, 0.04);
   backdrop-filter: blur(#{mixins.vw(15px)});
   padding: #{mixins.vw(24px)};
   display: flex;
